# fast_api

part2/: main.py  pyproject.toml
project/: pyproject.toml
project/app/: backend_pre_start.py  initial_data.py  main.py  schemas.py
project/app/db/: base_class.py  session.py
project/app/models/: recipe.py
project/app/schemas/: __init__.py
