[tool.poetry]
name = "part2"
version = "0.1.0"
description = "get started with fastapi"
authors = ["ArrowGreen1 <asinible@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "~0.11.3"
fastapi = "~0.68.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["email"], version = "~1.8.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


